removed old stuff aded localSotrage for arrays

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       <label id="counter" name="counter" class="counter"></label>
     </div>
     <button id="importButton" name="importButton" class="cornerButton"> Import </button>
-    <button id="downloadLocationButton" name="downloadLocationButton" class="cornerButton"> set location </button>
+    <button id="overviewButton" name="overviewButton" class="cornerButton"> Overview </button>
     <button id="linkButton" name="linkButton" class="linkButton"> 
       <label id="linkText" name="linkText" class="linkText"> link to original  </label>
     </button>     
