--- a/public/overview.html
+++ b/public/overview.html
@@ -15,11 +15,15 @@
     <div id="sideBar" class="sideBar">
         <div id="cornerContainer">
             <button id="mainPageButton" name="mainPageButton" class="cornerButton"> Main </button>
-            <button id="clearButton" name="clearButton" class="cornerButton"> Clear </button>
+            <button id="janikButton" name="janikButton" class="cornerButton"> Janik | 0 </button>
+            <button id="lukasButton" name="lukasButton" class="cornerButton"> Lukas | 0</button>
+            <button id="deleteButton" name="deleteButton" class="cornerButton">Delete</button>
         </div>  
     </div>
     <div id="main" class="main">
-
+        <div id="collageZone1" class="collageZone"></div>
+        <div id="collageZone2" class="collageZone"></div>
+        <div id="collageZone3" class="collageZone"></div>      
     </div>
     
   </body>
