overview delete finished

--- a/public/game.html
+++ b/public/game.html
@@ -6,7 +6,7 @@
         <title>69er Selector Local</title>
         <link rel="stylesheet" href="styles.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-        <script src="scripts/script.js" defer></script>
+        <script src="scripts/game.js" defer></script>
     </head>
     <body>
         <input type="file" id="fileInput" style="display: none;" accept=".html">  
