--- a/public/overview.html
+++ b/public/overview.html
@@ -18,6 +18,7 @@
             <button id="janikButton" name="janikButton" class="cornerButton"> Janik | 0 </button>
             <button id="lukasButton" name="lukasButton" class="cornerButton"> Lukas | 0</button>
             <button id="deleteButton" name="deleteButton" class="cornerButton">Delete</button>
+            <button id="startButton" name="startButton" class="cornerButton">Start</button>
         </div>  
     </div>
     <div id="main" class="main">
